tests/parsing/valid/mask_simple_definition/bus.fbd
mask my_mask
	width = 10
