tests/parsing/invalid/symbol_defined_twice_in_element/bus.fbd
bus my_bus
	const a = 10

	mask a
		width = 6
